--- a/index.html
+++ b/index.html
@@ -7,43 +7,48 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
-<body>
-    <div class="container">
-    <div class="row justify-content-center">
-        <div class="col-12 text-center position-relative">
-            <!-- Zone du personnage, avec les éléments positionnés horizontalement -->
-            <div class="character-layer-container">
-                <img id="skin-layer" class="character-layer" src="images/Skin/tint1_head.png" alt="Skin">
-                <img id="face-layer" class="character-layer" src="images/Face/face1.png" alt="Face">
-                <img id="hair-layer" class="character-layer" src="images/Hair/cheveux1.png" alt="Hair">
-                <img id="shirt-layer" class="character-layer" src="images/Shirts/Blue/blueShirt1.png" alt="Shirt">
+    <body>
+        <div class="container">
+            <div class="row justify-content-center mt-4">
+                <!-- Partie gauche : Personnage avec son nom et métier -->
+                <div class="col-12 col-md-4 text-center">
+                    <div class="character-layer-container">
+                        <img id="skin-layer" class="character-layer" src="images/Skin/tint1_head.png" alt="Skin">
+                        <img id="face-layer" class="character-layer" src="images/Face/face1.png" alt="Face">
+                        <img id="hair-layer" class="character-layer" src="images/Hair/cheveux1.png" alt="Hair">
+                        <img id="shirt-layer" class="character-layer" src="images/Shirts/Blue/blueShirt1.png" alt="Shirt">
+                    </div>
+                    <!-- Nom du personnage -->
+                    <input type="text" id="namecharacter" class="form-control mt-3" readonly placeholder="Nom du personnage">
+                    <button class="btn btn-primary mt-2" onclick="randomizeName()">RANDOMIZE NAME</button>
+                    <!-- Métier du personnage -->
+                    <div class="mt-3">
+                        <label for="job-select" class="form-label">Choisissez le métier de votre personnage</label>
+                        <select id="job-select" class="form-select" aria-label="Sélectionner un métier">
+                            <option value="" selected disabled>Choisissez un métier...</option>
+                            <option value="warrior">Guerrier</option>
+                            <option value="mage">Mage</option>
+                            <option value="archer">Archer</option>
+                            <option value="healer">Soigneur</option>
+                            <option value="thief">Voleur</option>
+                        </select>
+                    </div>
+                </div>
+
+                <!-- Partie centrale : Boutons de sélection -->
+                <div class="col-12 col-md-4 text-center mt-4 mt-md-0 d-flex justify-content-center flex-column">
+                    <button class="btn btn-primary option-btn active mb-2 w-50 mx-auto" onclick="selectCategory('face')">FACES</button>
+                    <button class="btn btn-primary option-btn mb-2 w-50 mx-auto" onclick="selectCategory('hair')">HAIR</button>
+                    <button class="btn btn-primary option-btn mb-2 w-50 mx-auto" onclick="selectCategory('shirt')">SHIRT</button>
+                    <button class="btn btn-primary option-btn mb-2 w-50 mx-auto" onclick="selectCategory('skin')">SKIN</button>
+                </div>
+
+                <!-- Partie droite : Bibliothèque d'images -->
+                <div class="col-12 col-md-4 text-center mt-4 mt-md-0" id="selection-area">
+                    <!-- Les images de sélection apparaîtront ici -->
+                </div>
             </div>
-
-            <!-- Nom et bouton random -->
-            <input type="text" id="namecharacter" class="form-control mt-3" readonly placeholder="Nom du personnage">
-            <button class="btn btn-primary mt-2" onclick="randomizeName()">RANDOMIZE NAME</button>
         </div>
-    </div>
-
-    <!-- Boutons pour sélectionner les catégories -->
-    <div class="row justify-content-center mt-4">
-        <div class="col-12 text-center">
-            <button class="btn btn-primary option-btn active" onclick="selectCategory('face')">FACES</button>
-            <button class="btn btn-primary option-btn" onclick="selectCategory('hair')">HAIR</button>
-            <button class="btn btn-primary option-btn" onclick="selectCategory('shirt')">SHIRT</button>
-            <button class="btn btn-primary option-btn" onclick="selectCategory('skin')">SKIN</button>
-        </div>
-    </div>
-
-    <!-- Section de sélection -->
-    <div class="row justify-content-center mt-4">
-        <div class="col-12 col-md-4 text-center" id="selection-area">
-            <!-- Les images de sélection apparaîtront ici -->
-        </div>
-    </div>
-</div>
-
-    
-<script src="main.js"></script>
-</body>
+        <script src="main.js"></script>
+    </body>
 </html>
